test/files/neg/hk-bad-bounds.check
hk-bad-bounds.scala:4: error: type arguments [Set] do not conform to trait SeqFactory's type parameter bounds [CC[X] <: Seq[X]]
  def f(x: Boolean) = if (x) (null: SeqFactory[List]) else (null: SeqFactory[Set])
                                                                  ^
one error found
